# kalygo_contracts

./: README.md  build.sh  compile.py  config_localhost.py  deploy_new.py  deploy_update.py  generate_test_accounts.sh  pyproject.toml  signed_asset_creation.tx  unsigned_asset_creation.tx
README/: 1.project_setup.md  2.begin_algorand_setup.md  3.smoke_test_algorand_setup.md
README/TIPS/: README.algorand_balance_rules.md  README.escrow_cashbuy_contract_outline.md  README.plan_of_attack.md  README.useful_goal_commands.md
READMEs/: 4.add_test_setup.md
READMEs/TIPS/: README.escrow_cashbuy_contract_outline.md  README.plan_of_attack.md  README.useful_goal_commands.md
config/: config_escrow.py  config_escrow_localhost.py  config_escrow_template.py  config_localhost.py
contracts/counter/: barebones.py
contracts/escrow/: constants.py  contract.py  program.py
contracts/escrow/guards/: __init__.py  guard_buyer_close_out.py  guard_buyer_set_arbitration.py  guard_buyer_set_pullout.py  guard_buyer_withdraw_ASA.py  guard_buyer_withdraw_balance.py  guard_creator_close_out.py  guard_creator_withdraw_balance.py  guard_optin_to_ASA.py  guard_optout_from_ASA.py  guard_seller_close_out.py  guard_seller_set_arbitration.py  guard_seller_withdraw_ASA.py  guard_seller_withdraw_balance.py  guard_send_ASA_to_buyer.py  guard_send_ASA_to_seller.py
contracts/escrow/initialization/: initialize_contract.py
contracts/escrow/subroutines/: __init__.py  buyer_set_arbitration.py  buyer_set_pullout.py  close_out.py  optin_to_ASA.py  optout_from_ASA.py  seller_set_arbitration.py  send_ASA_to_buyer.py  send_ASA_to_seller.py  withdraw_ASA.py  withdraw_balance.py
contracts/smoke_test/: contract.py  counter.py
modules/: AlgodClient.py  IndexerClient.py  __init__.py
modules/actions/: __init__.py  delete_contract.py  deploy_new.py  fund_minimum_balance.py  optin_contract.py  optout_contract.py  withdraw_ASA.py  withdraw_balance.py
modules/helpers/: print_ASA_holdings.py
modules/utils/: __init__.py  delete_contract.py  deploy_new.py  optin_contract.py  transfer_ASA_to_contract.py  withdraw_ASA.py  withdraw_balance.py
scripts/: __init__.py  clawback_ASA.py  create_ASA.py  delete_contract.py  delete_test_accounts.sh  deploy_new.py  deploy_update.py  generate_test_accounts.sh  optout_contract.py  print_ASA_holders.py  print_ASA_info.py  transfer_ASA_to_account.py  unsigned_asset_creation.tx
scripts/deploy/counter/: deploy_new.py
scripts/deploy/escrow/: deploy_new.py  deploy_update.py  get_contract_balance.py  optin_account.py  optin_contract.py  optout_contract.py  transfer_ASA_to_account.py  transfer_ASA_to_contract.py
scripts/deploy/simple_contracts/: deploy_new.py  deploy_update.py
scripts/escrow/: create_ASA.py  delete_contract.py  deploy_new.py  get_account_assets.py  optin_account.py  optin_contract.py  optout_contract.py  transfer_ASA_to_account.py
tests/: test_buyer_pullout_after_inspection_period.py  test_buyer_pullout_before_inspection_period.py  test_counter_contract.py  test_initial_state.py  test_optin_contract_to_ASA_then_buyer_send_and_withdraw_ASA.py
tests/counter_contract/: test_counter_contract.py
tests/escrow_contract/: conftest.py  scratch.txt  test_buyer_pullout.py  test_buyer_pullout_after_inspection_period.py  test_buyer_pullout_before_inspection_period.py  test_escrow_contract.py  test_initial_state.py  test_optin_contract_to_ASA_then_buyer_send_and_withdraw_ASA.py
