[tool.poetry]
name = "escrow-revolutionized"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "^1.20.2"
pyteal = "^0.20.1"
autopep8 = "^2.0.1"
pytest-xdist = "^3.1.0"

[tool.poetry.scripts]
deploy_new = "scripts.escrow.deploy_new:main"
deploy_update = "scripts.escrow.deploy_update:main"
create_ASA = "scripts.escrow.create_ASA:main"
transfer_ASA_to_account = "scripts.escrow.transfer_ASA_to_account:main"
transfer_ASA_to_contract = "scripts.escrow.transfer_ASA_to_contract:main"
optin_account = "scripts.escrow.optin_account:main"
optin_contract = "scripts.escrow.optin_contract:main"
optout_contract = "scripts.escrow.optout_contract:main"
print_ASA_holders = "scripts.escrow.print_ASA_holders:main"
get_contract_balance = "scripts.escrow.get_contract_balance:main"
get_account_assets = "scripts.escrow.get_account_assets:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
