[tool.poetry]
name = "escrow-revolutionized"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "^1.20.2"
pyteal = "^0.20.1"
autopep8 = "^2.0.1"
pytest-xdist = "^3.1.0"

[tool.poetry.scripts]
deploy_new = "scripts.deploy_new:main"
deploy_update = "scripts.deploy_update:main"
create_ASA = "scripts.create_ASA:main"
transfer_ASA_to_account = "scripts.transfer_ASA_to_account:main"
transfer_ASA_to_contract = "scripts.transfer_ASA_to_contract:main"
optin_account = "scripts.optin_account:main"
optin_contract = "scripts.optin_contract:main"
optout_contract = "scripts.optout_contract:main"
print_ASA_holders = "scripts.print_ASA_holders:main"
print_ASA_info = "scripts.print_ASA_info:main"
clawback_ASA = "scripts.clawback_ASA:main"
get_contract_balance = "scripts.get_contract_balance:main"
get_account_assets = "scripts.get_account_assets:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
